@@ -1,5 +1,8 @@
 2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* shptree.c: improve safety in face of buggy .shp file. 
+	http://trac.osgeo.org/gdal/ticket/2610
+
 	* dbfopen.c: DBFCreateField() can now also operate on files with
 	records, c/o Martin Dobias. 
 	https://trac.osgeo.org/gdal/ticket/2672
